--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
  <head>
    <meta charset="utf-8">
    <title>ID2116 Team X Project Page</title>
+
+<link rel="stylesheet" type="text/css" href="style.css">
+
  </head>
  <body>
     <h1>This is a Heading</h1>
@@ -11,5 +14,18 @@
     <p>Hi celeste.</p>
     <p>Hi zhiying!!</p>
  </body>
+ body {
+   background-color: lightblue;
+ }
+ 
+ h1 {
+   color: blue;
+   text-align: center;
+ }
+ 
+ p {
+   font-family: verdana;
+   font-size: 20px;
+ }
  
  </html>
