--- a/zhiying.html
+++ b/zhiying.html
@@ -6,49 +6,20 @@
    <title>Zhi Ying</title>
  </head>
  <body>
-    <h1>Welcome to Zhi Ying's page</h1>
+    <h1>Welcome to Zhi Ying's space</h1>
     <p>An enthusiastic and active girl who is in love with sports. She loves the adrenaline rush from it but also enjoy quiet moments on her own- reading a book while sipping a cup of tea. An empathetic thinker who constantly aims to enrich herself, her favourite section in the bookstore is along the self-development aisle. She also has a passion for cooking and an extraordinary appreciation for colours and flowers.</p>
  
     <h2>Her strengths as a designer are...</h2>
      <ul>
         <li>Observant</li>
-        <li>Quick to notice changes and detail oriented</li>
-           <li>Empathetic</li>
-           <li>Great understanding of the latent needs of users and their emotions towards specific designs</li>
-           <li>Perservering</li>
-           <li>Hardworking and driven with strong determination</li>
-           <li>Open Minded</li>
-           <li>Receptive to feedback and criticism</li>
+            <li2>Quick to notice changes and detail oriented</li2>
+        <li>Empathetic</li>
+           <li2>Great understanding of the latent needs of users and their emotions towards specific designs</li2>
+        <li>Perservering</li>
+           <li2>Hardworking and driven with strong determination</li2>
+        <li>Open Minded</li>
+           <li2>Receptive to feedback and criticism</li2>
      </ul>
  
-    <h2>My Teammate is Celeste!</h2>
-    <p><a href="yourteamate.html">YOUR TEAMMATE</a></p>
- </body>
- 
- </html>
- <html lang="en">
- <head>
-   <meta charset="utf-8">
-   <title>Your Name</title>
- </head>
- <body>
-    <h1>Hi My name is *****</h1>
-    <p>add your profile text here</p>
- 
-    <h2>My strengthes as a designer are...</h2>
-     <ul>
-       <li>Observant</li>
-    <li>Quick to notice changes and detail oriented</li>
-       <li>Empathetic</li>
-       <li>Great understanding of the latent needs of users and their emotions towards specific designs</li>
-       <li>Perservering</li>
-       <li>Hardworking and driven with strong determination</li>
-       <li>Open Minded</li>
-       <li>Receptive to feedback and criticism</li>
-     </ul>
- 
-    <h2>My Teammate is</h2>
-    <p><a href="yourteamate.html">YOUR TEAMMATE</a></p>
- </body>
  
  </html>
