zy's profile v2 update

--- a/zhiying.html
+++ b/zhiying.html
@@ -9,7 +9,7 @@
     <h1>Welcome to Zhi Ying's space</h1>
     <p>An enthusiastic and active girl who is in love with sports. She loves the adrenaline rush from it but also enjoy quiet moments on her own- reading a book while sipping a cup of tea. An empathetic thinker who constantly aims to enrich herself, her favourite section in the bookstore is along the self-development aisle. She also has a passion for cooking and an extraordinary appreciation for colours and flowers.</p>
  
-    <h2>Her strengths as a designer are...</h2>
+    <h2>her strengths as a designer are...</h2>
      <ul>
         <li>Observant</li>
             <li2>Quick to notice changes and detail oriented</li2>
