--- a/zhiying.html
+++ b/zhiying.html
@@ -7,6 +7,7 @@
  </head>
  <body>
     <h1>Welcome to Zhi Ying's space</h1>
+    <p><img src="image/IMG_6515.JPG" alt="short description" style="width:500px;height:500px;"></p>
     <p>An enthusiastic and active girl who is in love with sports. She loves the adrenaline rush from it but also enjoy quiet moments on her own- reading a book while sipping a cup of tea. An empathetic thinker who constantly aims to enrich herself, her favourite section in the bookstore is along the self-development aisle. She also has a passion for cooking and an extraordinary appreciation for colours and flowers.</p>
  
     <h2>her strengths as a designer are...</h2>
