Yuta's Comments: week3

--- a/zhiying.html
+++ b/zhiying.html
@@ -4,6 +4,7 @@
  <head>
    <meta charset="utf-8">
    <title>Zhi Ying</title>
+   <!--Try adding a CSS file to change appearance of the page. -->
  </head>
  <body>
     <h1>Welcome to Zhi Ying's space</h1>
