--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 
  </head>
+ <!--Keep on adding the contents! 加油！-->
  <body>
     <h1>This is a Heading</h1>
     <p>This is a paragraph.</p>
