--- a/zhiying.html
+++ b/zhiying.html
@@ -16,13 +16,13 @@
     <h2>her strengths as a designer are...</h2>
      <ul>
         <li>Observant</li>
-            <li2>Quick to notice changes and detail oriented</li2>
+            <li>Quick to notice changes and detail oriented</li>
         <li>Empathetic</li>
-           <li2>Great understanding of the latent needs of users and their emotions towards specific designs</li2>
+           <li>Great understanding of the latent needs of users and their emotions towards specific designs</li>
         <li>Perservering</li>
-           <li2>Hardworking and driven with strong determination</li2>
+           <li>Hardworking and driven with strong determination</li>
         <li>Open Minded</li>
-           <li2>Receptive to feedback and criticism</li2>
+           <li>Receptive to feedback and criticism</li>
      </ul>
  </body>
  
