--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <html lang="en">
  <head>
    <meta charset="utf-8">
-   <title>ID2116 Team X Project Page</title>
+   <title>welcome to our little workspace</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
