--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
  <html lang="en">
  <head>
    <meta charset="utf-8">
-   <title>welcome to our little workspace</title>
+   <title>what we do for computing in design</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
  </head>
  <!--Keep on adding the contents! 加油！-->
  <body>
-    <h1>This is a Heading</h1>
+    <h1>welcome to our little workspace</h1>
     <p>This is a paragraph.</p>
     <p>This is another paragraph.</p>
     <p>Hi celeste.</p>
