--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
  <!--Keep on adding the contents! 加油！-->
  <body>
     <h1>welcome to our little workspace</h1>
+    <div>
+       height:
+       width:
+    </div>
     <p>This is a paragraph.</p>
     <p>This is another paragraph.</p>
     <p>Hi celeste.</p>
     <p>Hi zhiying!!</p>
+
+    <h2>
+       work in progress
+    </h2>
  </body>
 
  
