--- a/zhiying.html
+++ b/zhiying.html
@@ -4,7 +4,7 @@
  <head>
    <link rel="stylesheet" type="text/css" href="style.css">
    <meta charset="utf-8">
-   <title>Zhi Ying</title>
+   <title>Zhi Ying's Profile</title>
    <!--Try adding a CSS file to change appearance of the page. -->
  </head>
  <body>
@@ -14,7 +14,7 @@
     <p>An enthusiastic and active girl who is in love with sports. She loves the adrenaline rush from it but also enjoy quiet moments on her own- reading a book while sipping a cup of tea. An empathetic thinker who constantly aims to enrich herself, her favourite section in the bookstore is along the self-development aisle. She also has a passion for cooking and an extraordinary appreciation for colours and flowers.</p>
  
     <h2>her strengths as a designer are...</h2>
-     <ol>
+     <ul>
         <li>Observant</li>
             <li>Quick to notice changes and detail oriented</li>
         <li>Empathetic</li>
@@ -23,7 +23,7 @@
            <li>Hardworking and driven with strong determination</li>
         <li>Open Minded</li>
            <li>Receptive to feedback and criticism</li>
-     </ol>
+     </ul>
  </body>
  
  </html>
