--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
  <!--Keep on adding the contents! 加油！-->
  <body>
     <h1>welcome to our little workspace</h1>
-    <div>
-       height:
-       width:
-    </div>
+ <img src= "teampage/4x/id2116" style="width:384px;height:295.2px;"> 
+ 
     <p>This is a paragraph.</p>
     <p>This is another paragraph.</p>
     <p>Hi celeste.</p>
