--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
-   <meta charset="utf-8">
-   <title>what we do for computing in design</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>what we do for computing in design</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
- </head>
- <!--Keep on adding the contents! 加油！-->
- <body>
-    <h1>welcome to our little workspace</h1>
- <img src= "teampage/4x/id2116" alt="module name" style="width:384px;height:295.2px;"> 
+</head>
+<!--Keep on adding the contents! 加油！-->
+<body>
+   <h1>welcome to our little workspace</h1>
+<p align="middle">
+<img src= "teampage/4x/coverpage3.png" alt="teampage" width="1107" height="959" usemap="#teampagemap">
+</p>
+   <p>This is a paragraph.</p>
+   <p>This is another paragraph.</p>
+   <p>Hi celeste.</p>
+   <p>Hi zhiying!!</p>
 
-    <p>This is a paragraph.</p>
-    <p>This is another paragraph.</p>
-    <p>Hi celeste.</p>
-    <p>Hi zhiying!!</p>
+   <h2>
+      work in progress
+   </h2>
+</body>
 
-    <h2>
-       work in progress
-    </h2>
- </body>
 
- 
- </html>
+</html>
