--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
     <h1>welcome to our little workspace</h1>
 <p align="middle">
  <img src= "teampage/4x/coverpage3.png" alt="teampage" width="1107" height="959" usemap="#teampagemap">
+</p>
+<map name="teampagemap">
 <area shape="rect" coords="130,110,514,405" href="zhiying.html" alt="id2116">
 <area shape="rect" coords="0,514,514,1107" href="zhiying.html" alt="zhiying">
-</p>
+</map>
+
     <p>This is a paragraph.</p>
     <p>This is another paragraph.</p>
     <p>Hi celeste.</p>
