--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
  <!--Keep on adding the contents! 加油！-->
  <body>
     <h1>welcome to our little workspace</h1>
-    <button type="button" class="btn btn-success">Success</button>
+    
+    <button type="button" onclick="location.href='zhiying.html'">it's me!</button>
+
 <p align="middle">
  <img src= "teampage/4x/coverpage3.png" alt="teampage" width="1107" height="959" usemap="#teampagemap">
 </p>
