--- a/celesteloh.html
+++ b/celesteloh.html
@@ -15,7 +15,7 @@
    <p>With my experience thus far, I have taken a keen interest in the explorative side of design. I feel that design should be a means of communicating with others on a level that speaks to their values, perceptions and subconscious mind. To practice design in a more explorative way is to keep oneself open-minded and always in search of undiscovered possibilities. </p>
 
    <h2>My teammate is Zhiying!</h2>
-   <p>You can visit her here:</p>
+   <p>Hi Zhiying!</p>
 
   
 </body>
