remove no scrolling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <area shape="rect" coords="0,445,514,959" href="zhiying.html" alt="zhiying">
 </map>
 <p>
-   <iframe style="width: 640px; height: 360px; overflow: hidden;" scrolling="no" frameborder="0" src="https://editor.p5js.org/undefined/embed/hpIV3PxJ"></iframe>
+   <iframe style="width: 640px; height: 360px; overflow: hidden;" frameborder="0" src="https://editor.p5js.org/undefined/embed/hpIV3PxJ"></iframe>
 </p>
     <h2>
        work in progress
