weekly journal and fonts

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <button type="button" onclick="location.href='zhiying.html'">it's me!</button>
 
 <p align="middle">
- <img src= "teampage/4x/coverpage3.png" alt="teampage" width="1107" height="959" usemap="#teampagemap">
+ <img src= "image/teampage/4x/coverpage5.png" alt="teampage" width="1107" height="959" usemap="#teampagemap">
 </p>
 <map name="teampagemap">
-<area shape="rect" coords="130,110,514,405" href="zhiying.html" alt="id2116">
+<area shape="rect" coords="593,0,1107,514" href="celesteloh.html" alt="celesteloh">
 <area shape="rect" coords="0,445,514,959" href="zhiying.html" alt="zhiying">
 </map>
 <p>
