link weekly logs

--- a/week2.html
+++ b/week2.html
@@ -5,6 +5,7 @@
   <title>week 1 journal</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
+<a id="week1_journal">
 </head>
 <body>
     <h1>week 1 journal</h1>
@@ -27,6 +28,7 @@ Pencil Case
 
     <h2>micro:bit code: interaction with pencil case</h2>
  </body>
+</a>
 
  
  </html>
