--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <map name="teampagemap">
 <area shape="rect" coords="593,0,1107,514" href="celesteloh.html" alt="celesteloh">
 <area shape="rect" coords="0,445,514,959" href="zhiying.html" alt="zhiying">
+<area shape="rect" coords="593,557,977,852" href="week2.html" alt="week2">
 </map>
 <p>
    <iframe style="width: 640px; height: 360px; overflow: hidden;" frameborder="0" src="https://editor.p5js.org/undefined/embed/hpIV3PxJ"></iframe>
