--- a/week2.html
+++ b/week2.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <a href="#week1_journal">Click here to see the content below.</a>
   <title>week 1 journal</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
@@ -29,6 +30,36 @@ Pencil Case
     <h2>micro:bit code: interaction with pencil case</h2>
  </body>
 </a>
+
+<a href="#week2_journal">Click here to see the content below.</a>
+  <title>week 2 journal</title>
+
+<link rel="stylesheet" type="text/css" href="style.css">
+<a id="week2_journal">
+</head>
+<body>
+    <h1>week 2 journal</h1>
+    <h2>html & css </h2>
+<p>
+website building
+</p>
+
+<div class="row">
+    <div class="column">
+      <img src="image/week1/1.JPG" alt="image1" style="width:100%">
+    </div>
+    <div class="column">
+      <img src="image/week1/2.JPG" alt="image2" style="width:100%">
+    </div>
+    <div class="column">
+      <img src="image/week1/3.JPG" alt="image3" style="width:100%">
+    </div>
+  </div>
+
+    <h2>micro:bit code: interaction with pencil case</h2>
+ </body>
+</a>
+
 
  
  </html>
