--- a/week2.html
+++ b/week2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <a href="#week1_journal">Click here to see the content below.</a>
+  <a href="#week1_journal">week1_journal.</a>
   <title>week 1 journal</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
@@ -31,7 +31,7 @@ Pencil Case
  </body>
 </a>
 
-<a href="#week2_journal">Click here to see the content below.</a>
+<a href="#week2_journal">week2_journal</a>
   <title>week 2 journal</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
