--- a/week2.html
+++ b/week2.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <a href="#week1_journal">week1_journal.</a>
   <a href="#week2_journal">week2_journal</a>
+  <a href="#week3_journal">week3_journal</a>
+  <a href="#week4_journal">week4_journal</a>
+
   <title>week 1 journal</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
@@ -34,17 +37,17 @@ Pencil Case
 
 
 
-  <title>week 2 journal</title>
+  
 
 <link rel="stylesheet" type="text/css" href="style.css">
-<a id="week2_journal">
+<a id="week3_journal">
 </head>
 <body>
-    <h1>week 2 journal</h1>
+    <h1>week 3 journal</h1>
   </a>
-    <h2>html & css </h2>
+    <h2>intro to p5.js </h2>
 <p>
-website building
+ideation
 </p>
 
 <div class="row">
@@ -62,6 +65,33 @@ website building
     <h2>micro:bit code: interaction with pencil case</h2>
  </body>
 
+ 
+
+ <link rel="stylesheet" type="text/css" href="style.css">
+ <a id="week4_journal">
+ </head>
+ <body>
+     <h1>week 4 journal</h1>
+   </a>
+     <h2>micro:bit & p5.js </h2>
+ <p>
+ brainstorming process
+ </p>
+ 
+ <div class="row">
+     <div class="column">
+       <img src="image/week1/1.JPG" alt="image1" style="width:100%">
+     </div>
+     <div class="column">
+       <img src="image/week1/2.JPG" alt="image2" style="width:100%">
+     </div>
+     <div class="column">
+       <img src="image/week1/3.JPG" alt="image3" style="width:100%">
+     </div>
+   </div>
+ 
+     <h2>micro:bit code: interaction with pencil case</h2>
+  </body>
 
 
  
