--- a/week2.html
+++ b/week2.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+
+  <title>our weekly logs</title>
   <a href="#week1_journal">week1_journal.</a>
   <a href="#week2_journal">week2_journal</a>
   <a href="#week3_journal">week3_journal</a>
   <a href="#week4_journal">week4_journal</a>
 
-  <title>week 1 journal</title>
+ 
 
 <link rel="stylesheet" type="text/css" href="style.css">
 <a id="week1_journal">
@@ -35,7 +37,29 @@ Pencil Case
     <h2>micro:bit code: interaction with pencil case</h2>
  </body>
 
+ <link rel="stylesheet" type="text/css" href="style.css">
+<a id="week2_journal">
+ <h1>week 2 journal</h1>
+  </a>
+    <h2>intro to webpage</h2>
+<p>
+  html & css
+</p>
 
+<div class="row">
+    <div class="column">
+      <img src="image/week1/1.JPG" alt="image1" style="width:100%">
+    </div>
+    <div class="column">
+      <img src="image/week1/2.JPG" alt="image2" style="width:100%">
+    </div>
+    <div class="column">
+      <img src="image/week1/3.JPG" alt="image3" style="width:100%">
+    </div>
+  </div>
+
+    <h2>micro:bit code: interaction with pencil case</h2>
+ </body>
 
   
 
