--- a/week2.html
+++ b/week2.html
@@ -45,18 +45,9 @@ Pencil Case
 <p>
   html & css
 </p>
-
-<div class="row">
-    <div class="column">
-      <img src="image/week1/1.JPG" alt="image1" style="width:100%">
-    </div>
-    <div class="column">
-      <img src="image/week1/2.JPG" alt="image2" style="width:100%">
-    </div>
-    <div class="column">
-      <img src="image/week1/3.JPG" alt="image3" style="width:100%">
-    </div>
-  </div>
+ <p>
+   The class in which we were guided to set up our Github page and use Visual Studio to push the codes onto our website was quite difficult to keep up with.
+ </p>
 
     <h2>micro:bit code: interaction with pencil case</h2>
  </body>
