--- a/week2.html
+++ b/week2.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
 
   <title>our weekly logs</title>
+  <h1> our weekly logs</h1>
   <h1>
   <a href="#week1_journal">week1_journal.</a>
   <a href="#week2_journal">week2_journal</a>
