--- a/week2.html
+++ b/week2.html
@@ -10,6 +10,8 @@
   <a href="#week2_journal">week2_journal</a>
   <a href="#week3_journal">week3_journal</a>
   <a href="#week4_journal">week4_journal</a>
+  <a href="#week5_journal">week5_journal</a>
+  <a href="#week6_journal">week6_journal</a>
 </h2>
  
 
@@ -83,10 +85,28 @@ ideation
  brainstorming process
  </p>
  
- 
- 
      <h2>micro:bit code: interaction with pencil case</h2>
   </body>
+
+  <a id="week5_journal">
+  </head>
+  <body>
+      <h2>week 5 journal</h2>
+    </a>
+      <h2>daily object photo & video documentation</h2>
+  <p>
+  Pencil Case
+  </p>
+
+  <a id="week6_journal">
+  </head>
+  <body>
+      <h2>week 6 journal</h2>
+    </a>
+      <h2>daily object photo & video documentation</h2>
+  <p>
+  Pencil Case
+  </p>
 
 
  
