--- a/week2.html
+++ b/week2.html
@@ -6,8 +6,8 @@
   <title>our weekly logs</title>
   <h1> our weekly logs</h1>
   <h2>
-  <a href="#week1_journal">week1_journal.</a>
-  <a href="#week2_journal">week2_journal</a>
+  <a href="#week1 journal">week1_journal.</a>
+  <a href="#week2 journal">week2_journal</a>
   <a href="#week3_journal">week3_journal</a>
   <a href="#week4_journal">week4_journal</a>
   <a href="#week5_journal">week5_journal</a>
@@ -41,7 +41,7 @@ Pencil Case
     <h2>micro:bit code: interaction with pencil case</h2>
  </body>
 
- <link rel="stylesheet" type="text/css" href="style.css">
+
 <a id="week2_journal">
  <h2>week 2 journal</h2>
   </a>
@@ -56,9 +56,7 @@ Pencil Case
     <h2>micro:bit code: interaction with pencil case</h2>
  </body>
 
-  
 
-<link rel="stylesheet" type="text/css" href="style.css">
 <a id="week3_journal">
 </head>
 <body>
@@ -74,7 +72,6 @@ ideation
 
  
 
- <link rel="stylesheet" type="text/css" href="style.css">
  <a id="week4_journal">
  </head>
  <body>
