--- a/week2.html
+++ b/week2.html
@@ -6,8 +6,8 @@
   <title>our weekly logs</title>
   <h1> our weekly logs</h1>
   <h2>
-  <a href="#week1_journal">week1_journal.</a>
-  <a href="#week2_journal">week2_journal</a>
+  <a href="#week1_journal">week1 journal.</a>
+  <a href="#week2_journal">week2 journal</a>
   <a href="#week3_journal">week3_journal</a>
   <a href="#week4_journal">week4_journal</a>
   <a href="#week5_journal">week5_journal</a>
@@ -16,8 +16,9 @@
  
 
 <link rel="stylesheet" type="text/css" href="style.css">
+
 <a id="week1_journal">
-</head>
+  <head>week 1 journal</head>
 <body>
     <h2>week 1 journal</h2>
   </a>
