--- a/week2.html
+++ b/week2.html
@@ -9,7 +9,7 @@
 <body>
   <h1> our weekly logs</h1>
   <h2>
-  <a href="#week1_journal"><b>week1 journal</b></a>
+  <a href="#week1_journal"><b>WEEK 1 JOURNAL</b></a>
   <a href="#week2_journal">week2 journal</a>
   <a href="#week3_journal">week3_journal</a>
   <a href="#week4_journal">week4_journal</a>
