--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <html lang="en">
  <head>
    <meta charset="utf-8">
-   <title>what we do for computing in design</title>
+   <title>computing in design with yuta</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
