--- a/week2.html
+++ b/week2.html
@@ -8,44 +8,41 @@
 
 <body>
   <h1> our weekly logs</h1>
-  <h2>
-  <a href="#week1_journal"><b>WEEK 1 JOURNAL</b></a>
-  <a href="#week2_journal">week2 journal</a>
-  <a href="#week3_journal">week3_journal</a>
-  <a href="#week4_journal">week4_journal</a>
-  <a href="#week5_journal">week5_journal</a>
-  <a href="#week6_journal">week6_journal</a>
-</h2>
- 
-
-
+  <div id="#weeklinks" style="text-align: center;">
+  <a href="#week1_journal">week 1</a>
+  <a href="#week2_journal">week 2</a>
+  <a href="#week3_journal">week 3</a>
+  <a href="#week4_journal">week 4</a>
+  <a href="#week5_journal">week 5</a>
+  <a href="#week6_journal">week 6</a>
+  </div>
 
 <a id="week1_journal">
 
-    <h2>week 1 journal</h2>
+    <h2>. one .</h2>
   </a>
-    <h2>daily object photo & video documentation</h2>
+    <h3>daily object photo & video documentation</h3>
 <p>
 Pencil Case
 </p>
 
-<div class="row">
-    <div class="column">
-      <img src="image/week1/1.JPG" alt="image1" style="width:100%">
-    </div>
-    <div class="column">
-      <img src="image/week1/2.JPG" alt="image2" style="width:100%">
-    </div>
-    <div class="column">
-      <img src="image/week1/3.JPG" alt="image3" style="width:100%">
-    </div>
+<div class="row"> 
+
+      <img src="image/week1/1.JPG" alt="image1" style="width:33%">
+  
+  
+      <img src="image/week1/2.JPG" alt="image2" style="width:33%">
+   
+    
+      <img src="image/week1/3.JPG" alt="image3" style="width:33%">
+    
   </div>
 
     <h2>micro:bit code: interaction with pencil case</h2>
 
 
 <a id="week2_journal">
- <h2>week 2 journal</h2>
+ <h2>. two .</h2>
   </a>
     <h2>intro to webpage</h2>
 <p>
@@ -61,7 +58,7 @@ Pencil Case
 <a id="week3_journal">
 
 
-    <h2>week 3 journal</h2>
+    <h2>. three .</h2>
   </a>
     <h2>intro to p5.js </h2>
 <p>
@@ -75,7 +72,7 @@ ideation
 
  <a id="week4_journal">
  
-     <h2>week 4 journal</h2>
+     <h2>. four .</h2>
    </a>
      <h2>micro:bit & p5.js </h2>
  <p>
@@ -87,7 +84,7 @@ ideation
 
   <a id="week5_journal">
   
-      <h2>week 5 journal</h2>
+      <h2>. five .</h2>
     </a>
       <h2>daily object photo & video documentation</h2>
   <p>
@@ -96,7 +93,7 @@ ideation
 
   <a id="week6_journal">
 
-      <h2>week 6 journal</h2>
+      <h2>. six .</h2>
     </a>
       <h2>daily object photo & video documentation</h2>
   <p>
