--- a/week2.html
+++ b/week2.html
@@ -22,9 +22,15 @@
     <h2>. one .</h2>
   </a>
     <h3>daily object photo & video documentation</h3>
+  <h4>hi</h4>
 <p>
-Pencil Case
+  Pencil Case
 </p>
+
+<caption> hello </caption>
+
+
+
 
 <div class="row"> 
 
