update weekly logs and image

--- a/week2.html
+++ b/week2.html
@@ -21,18 +21,40 @@
 
     <h2>. one .</h2>
   </a>
-    <h3>daily object photo & video documentation</h3>
-  <h4>hi</h4>
+    <h3>introduction to micro:bit</h3>
+  <h4>reflection: first hands-on experience with micro:bit</h4>
 <p>
-  Pencil Case
+
+  The video of the projects from ECAL that you showed us in class was super cool! It excites us about what we could do for this project with the micro:bit. The hands-on micro:bit exercises in class to form shapes and word strings exposed us to some of the functions as we learned to apply loops and time delays to our codes. We also explored the conditions that we could include when we write our codes and the way to write codes when dealing with sensors.
 </p>
 
-<caption> hello </caption>
+<p>
 
+  -inserts text and pictures of heart shape/other emojis and word string exercises-
+</p>
 
+<a id="week2_journal">
+  <h2>. two .</h2>
+   </a>
+     <h3>introduction to webpage & choosing everyday object</h3>
 
+     <p>
+       -inserts climbing and kayak photos side by side and link to profile pages-
+     </p>
 
-<div class="row"> 
+     <h3>
+      celeste's profile 
+     </h3>
+
+     <h3>
+      zhi ying's profile 
+     </h3>
+
+     <h4>
+     our everyday object: a pencil case  
+     </h4>
+
+     <div class="row"> 
 
       <img src="image/week1/1.JPG" alt="image1" style="width:33%">
   
@@ -44,48 +66,78 @@
     
   </div>
 
-    <h2>micro:bit code: interaction with pencil case</h2>
+  <h4>
+    reflection: visual studio and github 
+  </h4>
 
+  <p>
+    The class in which we were guided to set up our Github page and use Visual Studio to push the codes onto our website was quite difficult to keep up with. We were quite overwhelmed trying to get so many things right at the same time without fully understanding the reasons behind some actions that we did. The ‘push’ and ‘pull’ commands were definitely confusing at first as we couldn’t spot the difference after taking an action, especially when the changes did not show right away. At this initial stage, code writing on HTML seemed easier than styling the website with CSS. We had trouble changing the font to the one that we downloaded for a long time… only to realise that we needed to include @font-face and the source code file of the font for changes to be seen.
 
-<a id="week2_journal">
- <h2>. two .</h2>
-  </a>
-    <h2>intro to webpage</h2>
-<p>
-  html & css
-</p>
- <p>
-   The class in which we were guided to set up our Github page and use Visual Studio to push the codes onto our website was quite difficult to keep up with.
- </p>
+  </p>
 
-    <h2>micro:bit code: interaction with pencil case</h2>
- 
-
-<a id="week3_journal">
-
+  <a id="week3_journal">
 
     <h2>. three .</h2>
   </a>
-    <h2>intro to p5.js </h2>
+    <h3>intro to p5.js </h3>
+
+    <h4>
+      brainstorming for our everyday object
+    </h4>
 <p>
-ideation
+  We chose the pencil case as our everyday object because we saw potential in the motion of sliding/pulling the zip.
+  Our initial ideas were to use the motion to play a video, with simple open=start; close=stop commands.
+  We had our minds fixed on using a motion sensor or accelerometer to record the motion, but we then realised that using a light sensor to detect the open/close state of the pencil case would be more straightforward and possibly more reliable to work with.
+  
 </p>
 
-    <h2></h2>
+<p>
+  -inserts brief description for mickey video: exploration on button commands to play two videos-
+</p>
 
+<p>
+  <iframe style="width: 640px; height: 360px; overflow: hidden;" frameborder="0" src="https://editor.p5js.org/undefined/embed/hpIV3PxJ"></iframe>
+</p>
 
- 
+<p>
+  -inserts mickey code next to the video frame-
+</p>
 
  <a id="week4_journal">
  
      <h2>. four .</h2>
    </a>
-     <h2>micro:bit & p5.js </h2>
+     <h3>putting it together: micro:bit & p5.js </h3>
+     <h4>
+       initial ideation
+     </h4>
  <p>
- brainstorming process
+  When brainstorming for the visual feedback we wanted to work on, our aim was to make it interesting and relevant to our motion.
+  One of our ideas involved the direct mapping of the sliding motion onto the visual feedback of a sliding colour palette. The end result would be similar to a colouring book, where each part is highlighted for the user to select a specific colour using the colour slider, working towards a fully personalized coloured image.
+  We also considered additional sensors, such as pressure points, to communicate a final selection after the slider hovers over an option.
+  
  </p>
+
+ <h4>
+   final ideation: a pencil case that blows bubbles
+ </h4>
  
-     <h2>micro:bit code: interaction with pencil case</h2>
+ <p>
+  After further brainstorming, we realised that turning the physical sliding motion into a digital sliding motion is not ideally interesting. A more fascinating project would involve a visual feedback that is pleasantly unexpected but would make sense with the physical interaction.
+  Our final idea was to relate the unzipping of a pencil case to a release of bubbles digitally reflected on the screen! We chose bubbles because we wanted to convey a feeling of lighthearted joy that would appeal to almost any age group, while hinting at a childlike sense of fun.
+  In trying to make our project even more interactive, we decided to split the motion into at least two parts. This would create a more realistic representation of how the gradual increase in amount of bubbles released is dependent on how far the pencil case is unzipped. 
+  
+ </p>
+
+ <h4>
+   experiment with micro:bit & external light sensor
+ </h4>
+
+ <p>
+  We experimented many times to precisely record the amount of studio light that is registered when the pencil case is half open and fully open to determine the range input to command the two videos to play.
+ </p>
+ <img src="State Transition Diagram- Zhiying Celeste.png" alt="state transition diagram" style="width:750px;height:500px;">
+ 
  
 
   <a id="week5_journal">
