--- a/week2.html
+++ b/week2.html
@@ -15,6 +15,7 @@
   <a href="#week4_journal">week 4</a>
   <a href="#week5_journal">week 5</a>
   <a href="#week6_journal">week 6</a>
+  <a href="#demo_day">demo day</a>
   </div>
 
 <a id="week1_journal">
@@ -136,26 +137,69 @@
  <p>
   We experimented many times to precisely record the amount of studio light that is registered when the pencil case is half open and fully open to determine the range input to command the two videos to play.
  </p>
- <img src="State Transition Diagram - Zhiying Celeste.png" alt="state transition diagram" style="width:750px;height:500px;">
- 
+
+ <p>
+   -inserts image of "unzip your imagination"-
+ </p>
+
  
   <a id="week5_journal">
   
       <h2>. five .</h2>
     </a>
-      <h2>daily object photo & video documentation</h2>
-  <p>
-  Pencil Case
-  </p>
+      <h3>consultation & refinement</h3>
+  
+  <h4>
+    state transition diagram
+  </h4>
 
+  <img src="State Transition Diagram - Zhiying Celeste.png" alt="state transition diagram" style="width:750px;height:500px;">
+
+  <h4>
+    coding with external light sensor
+  </h4>
+<p>
+-show screenshots of codes and versions of edits-
+</p>
+  
   <a id="week6_journal">
 
       <h2>. six .</h2>
     </a>
-      <h2>daily object photo & video documentation</h2>
+      <h3>prototyping and code refinement</h3>
+      <h4>
+        video rendering
+      </h4>
   <p>
-  Pencil Case
+  -inserts rendered videos
   </p>
+
+  <h4>
+    code refinement
+  </h4>
+
+  <p>
+    -inserts screenshots of code refinement: video size & position, start and stop smoothly-
+  </p>
+
+  <h4>
+    preparation for demo day
+  </h4>
+
+  <p>
+  After finalizing the different components, our last step was to design a presentable setup! We wanted minimal distractions and to isolate the simple but pleasant interaction between the zipping of a pencil case and the bubble-release feedback.
+  We secured the pencil case by sewing it to a hard cardboard backing and black paper used to cover the laptop, leaving a small cutout window to display the bubble-release feedback.
+
+  </p>
+
+  <a id="demo_day">
+
+    <h2>. demo day .</h2>
+
+  </a>
+
+  <h3>a magical pencil case that blows bubbles</h3>
+  
   </body>
     
   
