final content update

--- a/week2.html
+++ b/week2.html
@@ -199,7 +199,10 @@
   </a>
 
   <h3>a magical pencil case that blows bubbles</h3>
-  
+
+  <p>
+    -inserts videos and images of demo day-
+  </p>
   </body>
     
   
