--- a/week2.html
+++ b/week2.html
@@ -202,7 +202,7 @@
 
   </a>
 
-  <h3>a magical pencil case that blows bubbles</h3>
+  <h3>a bubble blowing pencil case</h3>
 
   <p>
     -inserts videos and images of demo day-
