--- a/week2.html
+++ b/week2.html
@@ -67,6 +67,10 @@
     
   </div>
 
+  <p>
+    -inserts zip and unzip videos-
+  </p>
+
   <h4>
     reflection: visual studio and github 
   </h4>
@@ -138,6 +142,7 @@
   We experimented many times to precisely record the amount of studio light that is registered when the pencil case is half open and fully open to determine the range input to command the two videos to play.
  </p>
 
+ <img src="Poster.png" alt="bubble blowing pencil case poster" style="width:750px;height:500px;">
  <p>
    -inserts image of "unzip your imagination"-
  </p>
