--- a/week2.html
+++ b/week2.html
@@ -142,7 +142,7 @@
   We experimented many times to precisely record the amount of studio light that is registered when the pencil case is half open and fully open to determine the range input to command the two videos to play.
  </p>
 
- <img src="Poster.png" alt="bubble blowing pencil case poster" style="width:750px;height:500px;">
+ <img src="image/Poster.png.png" alt="bubble blowing pencil case poster" style="width:750px;height:500px;">
  
  <p>
    -inserts image of "unzip your imagination"-
@@ -159,7 +159,7 @@
     state transition diagram
   </h4>
 
-  <img src="State Transition Diagram - Zhiying Celeste.png" alt="state transition diagram" style="width:750px;height:500px;">
+  <img src="image/State Transition Diagram - Zhiying Celeste.png" alt="state transition diagram" style="width:750px;height:500px;">
 
   <h4>
     coding with external light sensor
