--- a/week2.html
+++ b/week2.html
@@ -124,7 +124,7 @@
  </p>
 
  <h4>
-   final ideation: a pencil case that blows bubbles
+   final ideation: a bubble blowing pencil case
  </h4>
  
  <p>
@@ -142,7 +142,7 @@
   We experimented many times to precisely record the amount of studio light that is registered when the pencil case is half open and fully open to determine the range input to command the two videos to play.
  </p>
 
- <img src="image/Poster.png.png" alt="bubble blowing pencil case poster" style="width:750px;height:500px;">
+ <img src="image/Poster.png" alt="bubble blowing pencil case poster" style="width:750px;height:500px;">
  
  <p>
    -inserts image of "unzip your imagination"-
@@ -156,7 +156,7 @@
       <h3>consultation & refinement</h3>
   
   <h4>
-    state transition diagram
+    state transition diagram: a bubble blowing pencil case
   </h4>
 
   <img src="image/State Transition Diagram - Zhiying Celeste.png" alt="state transition diagram" style="width:750px;height:500px;">
