--- a/week2.html
+++ b/week2.html
@@ -57,19 +57,17 @@
 
      <div class="row"> 
 
-      <img src="image/week1/1.JPG" alt="image1" style="width:33%">
+       <div class= "pc"></div>
+      <img src="image/week1/1.JPG" alt="image1" style="width:25%">
   
-  
-      <img src="image/week1/2.JPG" alt="image2" style="width:33%">
+      <div class= "pc"></div>
+      <img src="image/week1/2.JPG" alt="image2" style="width:25%">
    
-    
-      <img src="image/week1/3.JPG" alt="image3" style="width:33%">
+      <div class= "pc"></div>
+      <img src="image/week1/3.JPG" alt="image3" style="width:25%">
     
   </div>
 
-  <p>
-    -inserts zip and unzip videos-
-  </p>
 
   <h4>
     reflection: visual studio and github 
@@ -205,6 +203,20 @@
   </a>
 
   <h3>a bubble blowing pencil case</h3>
+<div class= "demo_image">
+
+  <div class= "demo"></div>
+  <img src="image/demo1.jpg" alt="demo image 1" style="width:25%">
+
+  <div class= "demo"></div>
+  <img src="image/demo2.jpg" alt="demo image 2" style="width:25%">
+
+  <div class= "demo"></div>
+  <img src="image/demo3.jpg" alt="demo image 3" style="width:25%">
+
+</div>
+ 
+
 
   <p>
     -inserts videos and images of demo day-
