--- a/week2.html
+++ b/week2.html
@@ -171,6 +171,18 @@
         video rendering
       </h4>
   <p>
+    <div class= "renderings"> 
+    <video width="600" height="450" controls>
+
+      <div class = "bubbles"></div>
+      <source src="video/Bubbles#1vid.4.mp4" type="video/mp4">
+        
+        <div class = "bubbles"></div>
+      <source src="video/Bubbles#2vid.3.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+
+    </video>
+  </div> 
   -inserts rendered videos-
   </p>
 
