--- a/week2.html
+++ b/week2.html
@@ -140,7 +140,7 @@
   We experimented many times to precisely record the amount of studio light that is registered when the pencil case is half open and fully open to determine the range input to command the two videos to play.
  </p>
 
- <img src="image/Poster PNG.png" alt="bubble blowing pencil case poster" style="width:750px;height:500px;">
+ <img src="image/Poster PNG.png" alt="bubble blowing pencil case poster" style="width:600px;height:400px;">
 
  
   <a id="week5_journal">
@@ -153,7 +153,7 @@
     state transition diagram: a bubble blowing pencil case
   </h4>
 
-  <img src="image/State Transition Diagram - Zhiying Celeste.png" alt="state transition diagram" style="width:750px;height:500px;">
+  <img src="image/State Transition Diagram - Zhiying Celeste.png" alt="state transition diagram" style="width:600px;height:400px;display:block; text-align: center;">
 
   <h4>
     coding with external light sensor
@@ -176,7 +176,7 @@
 
       <div class = "bubbles"></div>
       <source src="video/Bubbles#1vid.4.mp4" type="video/mp4">
-        
+
         <div class = "bubbles"></div>
       <source src="video/Bubbles#2vid.3.mp4" type="video/mp4">
         Your browser does not support the video tag.
