--- a/zhiying.html
+++ b/zhiying.html
@@ -10,7 +10,7 @@
  </head>
  <body>
     
-    <h1>Welcome to Zhi Ying's space</h1>
+    <h1>welcome to zhi ying's space</h1>
     <div class="two-col">
        
       <img src="image/IMG_6515.JPG" alt="short description" style="width:750px;height:500px;">
