--- a/week2.html
+++ b/week2.html
@@ -137,15 +137,14 @@
 
 
        <div class= "pc"></div>
-      <img src="image/week1/1.JPG" alt="image1" style="width:20%; border-style: solid; border-width: 2px;border-color: #AEB9B1;padding: 4px;border-radius: 5px;">
+      <img src="image/week1/1.JPG" alt="image1" style="width:20%; background-color:  #AEB9B1; padding: 6px;border-radius: 5px;">
   
       <div class= "pc"></div>
       
-      <img src="image/week1/2.JPG" alt="image2" style="width:20%; border-style: solid; border-width: 2px;border-color: #AEB9B1;padding: 4px;border-radius: 5px;">
+      <img src="image/week1/2.JPG" alt="image2" style="width:20%; border-style: solid; border-width: 2px;border-color: #AEB9B1;padding: 5px;border-radius: 5px;">
    
       <div class= "pc"></div>
-      <img src="image/week1/3.JPG" alt="image3" style="width:20%; border-style: solid; border-width: 2px;border-color: #AEB9B1;padding: 4px;border-radius: 5px;">
-    
+      <img src="image/week1/3.JPG" alt="image3" style="width:20%; background-color:  #AEB9B1; padding: 6px;border-radius: 5px;">
   </div>
 
   
