--- a/week2.html
+++ b/week2.html
@@ -254,7 +254,7 @@
  
 
  
- <img src="image/Poster PNG.png" alt="bubble blowing pencil case poster" style="width:600px;height:400px;">
+ <img src="image/Poster PNG.png" alt="bubble blowing pencil case poster" style="width:500px;height:333px; margin-left: 500px;">
 
  
   <a id="week5_journal">
@@ -267,7 +267,7 @@
     state transition diagram: a bubble blowing pencil case
   </h4>
 
-  <img src="image/State Transition Diagram - Zhiying Celeste.png" alt="state transition diagram" style="width:600px;height:400px;display:block; text-align: center;">
+  <img src="image/State Transition Diagram - Zhiying Celeste.png" alt="state transition diagram" style="width:750px;height:500px;margin-left: 370px;margin-bottom: 40px;padding: 20px;border-style: solid;border-color:#AEB9B1 ;border-radius: 20px;">
 
   <h4>
     coding with external light sensor
@@ -354,16 +354,16 @@
 <div class= "demo_image">
 
   <div class= "demo"></div>
-  <img src="image/demo1.jpg" alt="demo image 1" style="width:20%">
+  <img src="image/demo1.jpg" alt="demo image 1" style="width:20%;border-style: solid; border-width: 2px;border-color: #AEB9B1;padding: 5px;border-radius: 5px;">
 
   <div class= "demo"></div>
-  <img src="image/demo2.jpg" alt="demo image 2" style="width:20%">
+  <img src="image/demo2.jpg" alt="demo image 2" style="width:20%;border-style: solid; border-width: 2px;border-color: #AEB9B1;padding: 5px;border-radius: 5px;">
 
   <div class= "demo"></div>
-  <img src="image/demo3.jpg" alt="demo image 3" style="width:20%">
+  <img src="image/demo3.jpg" alt="demo image 3" style="width:20%;border-style: solid; border-width: 2px;border-color: #AEB9B1;padding: 5px;border-radius: 5px;">
 
 </div>
- 
+
 
 
   <p>
