--- a/celesteloh.html
+++ b/celesteloh.html
@@ -14,7 +14,7 @@
   <h1>welcome to celeste's space</h1>
   <div class="row">
      <div class= "profile photo pt1"></div>
-     <img src="image/Celeste - clayflip.jpg" alt="short description" style="width:450px;height:600px;border-style: solid;border-color: rgb(203, 219, 201);border-width: 15px;">
+     <img src="image/Celeste - clayflip.jpg" alt="short description" style="width:450px;height:600px;border-style: solid;border-color: rgb(203, 219, 201);border-width: 15px;border-radius: 10px;">
      
   </div>
 
