--- a/zhiying.html
+++ b/zhiying.html
@@ -14,7 +14,7 @@
 
   <div class="row">
      <div class= "profile photo pt1"></div>
-     <img src="image/IMG_6515.JPG" alt="short description" style="width:600px;height:400px;border-style: solid;border-color: rgb(203, 219, 201);border-width: 15px;">
+     <img src="image/IMG_6515.JPG" alt="short description" style="width:600px;height:400px;border-style: solid;border-color: rgb(203, 219, 201);border-width: 15px;border-radius: 10px;">
      
   </div>
 
