--- a/celesteloh.html
+++ b/celesteloh.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Celeste Loh</title>
-  <script src="sketch.js"></script>
-  <script src="p5.js"></script>
-  <script src="p5.sound.min.js"></script>
-
+   
   <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="utf-8">
+  <title>Celeste</title>
 </head>
 <body>
 
